Add documentation for .env file

--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
+###
+# This environment file should ONLY be used for development. It will act as a placeholder for environment variables
+# in our production system.
+###
+
 # DB Configurations
-TYPEORM_HOST=localhost
-TYPEORM_USERNAME=shane
-TYPEORM_PASSWORD=mypassword
-TYPEORM_DATABASE=kanto
-TYPEORM_PORT=5432
+# TYPEORM_HOST=localhost
+# TYPEORM_USERNAME=user_name
+# TYPEORM_PASSWORD=password
+# TYPEORM_DATABASE=schema
+# TYPEORM_PORT=5432
 
 # Application Configurations
-APP_PORT=8080
+# APP_PORT=8080
