Rename to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 ###
 # This environment file should ONLY be used for development. It will act as a placeholder for environment variables
 # in our production system.
+#
+# To use the environment configuration file, remove the .example appended to the end of the file. The program will
+# automatically pick up the .env configuration.
 ###
 
 # DB Configurations
